Hack skija build with java 8